--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "passport-local-mongoose": "^1.0.0",
       "serve-favicon": "^2.2.0",
       "should": "~2.1.0",
-      "instagram-node":"*"
+      "instagram-node":"*",
+      "instagram-private-api":"*"
   }
 }
