--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
       "serve-favicon": "^2.2.0",
       "should": "~2.1.0",
       "instagram-node":"*",
-      "instagram-private-api":"*"
+      "instagram-private-api":"*",
+      "tough-cookie": "^2.3.1",
+      "tough-cookie-filestore": "0.0.1",
+      "underscore": "^1.8.3","mkdirp": "^0.5.1"
   }
 }
